deploy/retrieveUnpackaged/objects/SFDC_Answer__c.object
<CustomObject>
    <description>The range of possible answers for a given question. Each answer has a score, and caller coaching, and determines the follow on question to ask.</description>
    <fields>
        <fullName>Answer_Coach__c</fullName>
        <description>Coaching/ guiding for the person asking these question.</description>
        <label>Answer Coach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01550000000VdV0&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order the answer appears in the list of answers</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to store text values in an &apos;other&apos; field</description>
        <label>Other Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <description>The question object that the answer applies to.</description>
        <label>Question</label>
        <referenceTo>SFDC_Questions__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>R00N50000001nTwpEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The relative weight assigned to this answer.  Note: This is relative weight, not absolute weight.</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>AN-{000000}</displayFormat>
        <label>Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>